--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -1,4 +1,5 @@
 .newco {
+  overflow: hidden;
   position: relative;
 }
 
@@ -27,6 +28,7 @@
 }
 
 .newco__section-1 {
+  background: $green;
   min-height: 100vh;
   position: relative;
 }
@@ -36,6 +38,7 @@
   position: absolute;
   transform: translate(-50%, -50%);
   width: 86.8%; // 100 - 6.6 * 2
+  z-index: 3;
 }
 
 .newco__header-container--1 {
@@ -57,23 +60,127 @@
 }
 
 .newco__section-2 {
+  background: $blue;
   min-height: 100vh;
   position: relative;
 }
 
 .newco__section-3 {
-  display: grid;
-  grid-template-rows: 75px 100px;
+  background: $white;
   padding-bottom: 75px;
   padding-top: 100px;
 }
 
+.newco__section-3__h3 {
+  margin-bottom: 30px;
+}
+
+.newco__section-3__grid {
+  display: grid;
+  grid-template-rows: auto auto auto auto auto;
+  padding: 0 6.6%;
+}
+
+.newco__section-3__text {
+  font-family: "Cambon";
+  font-size: 25px;
+  margin-bottom: 5px;
+  text-align: center;
+}
+
+// row 1
+.newco__section-3__row-1 {
+  grid-row: 1 / 2;
+  margin-bottom: 15px;
+}
+
+.newco__brand {
+  margin-left: auto;
+  width: 140px;
+}
+
+.newco__section-3__img-1 {
+  display: block;
+  margin: 0 auto 5px auto;
+  width: 55px;
+}
+
+// row 2
+.newco__section-3__row-2 {
+  grid-row: 2 / 3;
+  margin-bottom: 40px;
+}
+
+.newco__dev {
+  margin-right: auto;
+  width: 140px;
+}
+
+.newco__section-3__img-2 {
+  display: block;
+  margin: 0 auto 5px auto;
+  width: 67px;
+}
+
+// row 3
+.newco__section-3__row-3 {
+  grid-row: 3 / 4;
+  margin-bottom: 40px;
+}
+
+.newco__design {
+  margin: 0 auto 0 45%;
+  width: 130px;
+}
+
+.newco__section-3__img-3 {
+  display: block;
+  margin: 0 auto 5px auto;
+  width: 72px;
+}
+
+// row 4
+.newco__section-3__row-4 {
+  grid-row: 4 / 5;
+  margin-bottom: 40px;
+}
+
+.newco__growth {
+  margin: 0 auto 0 10%;
+  width: 150px;
+}
+
+.newco__section-3__img-4 {
+  display: block;
+  margin: 0 auto 5px auto;
+  width: 52px;
+}
+
+// row 5
+.newco__section-3__row-5 {
+  grid-row: 5 / 6;
+  margin-bottom: 40px;
+}
+
+.newco__more {
+  margin: 0 5% 0 auto;
+  width: 150px;
+}
+
+.newco__section-3__img-5 {
+  display: block;
+  margin: 0 auto 5px auto;
+  width: 50px;
+}
+
 .newco__section-4 {
+  background: $purple;
   min-height: 100vh;
   position: relative;
 }
 
 .newco__section-5 {
+  background: $blush;
   min-height: 100vh;
   position: relative;
 }
@@ -82,6 +189,75 @@
   font-family: "Cambon";
   font-size: 50px;
   text-align: center;
+}
+
+// shapes
+.shape {
+  position: absolute;
+  z-index: 2;
+}
+
+.shape-1 {
+  max-width: 300px;
+  right: -5%;
+  top: -14%;
+  width: 60%;
+}
+
+.shape-2 {
+  max-width: 145px;
+  left: 6%;
+  top: 15%;
+  width: 22%;
+}
+
+.shape-3 {
+  max-width: 225px;
+  right: 6%;
+  top: 80%;
+  width: 41%;
+}
+
+.shape-4 {
+  max-width: 425px;
+  left: -32%;
+  top: -12%;
+  width: 94%;
+}
+
+.shape-5 {
+  bottom: -5%;
+  max-width: 225px;
+  right: 6.6%;
+  width: 50%;
+}
+
+.shape-6 {
+  max-width: 150px;
+  left: 15%;
+  top: 5%;
+  width: 21%;
+}
+
+.shape-7 {
+  bottom: 17%;
+  max-width: 135px;
+  right: 10%;
+  width: 16%;
+}
+
+.shape-8 {
+  max-width: 350px;
+  left: -15%;
+  top: -7%;
+  width: 73%;
+}
+
+.shape-9 {
+  max-width: 325px;
+  bottom: 10%;
+  left: 25%;
+  width: 45.5%;
 }
 
 @media (min-width: $screen-md) and (max-width: #{$screen-lg - 1px}) {
@@ -96,6 +272,64 @@
 
   .newco__h1 {
     margin-bottom: 60px;
+  }
+
+  .shape-1 {
+    right: 7%;
+    top: -18%;
+    width: 39%;
+  }
+
+  .shape-2 {
+    left: 13%;
+    top: 22%;
+    width: 13%;
+  }
+
+  .shape-3 {
+    right: 6%;
+    top: 80%;
+    width: 30%;
+  }
+
+  .shape-4 {
+    left: -17%;
+    top: -12%;
+    width: 49.5%;
+  }
+
+  .shape-5 {
+    right: 6.6%;
+    bottom: -5%;
+    width: 26%;
+  }
+
+  .shape-6 {
+    left: 16%;
+    top: 5%;
+    width: 10%;
+  }
+
+  .shape-7 {
+    bottom: 17%;
+    right: 10%;
+    width: 17%;
+  }
+
+  .shape-8 {
+    left: -15%;
+    top: -7%;
+    width: 73%;
+  }
+
+  .shape-9 {
+    bottom: 10%;
+    left: 17%;
+    width: 28%;
+  }
+
+  .newco__section-3__grid {
+    padding: 0 11%;
   }
 }
 
@@ -121,6 +355,10 @@
     width: 80.6%; // 100 - 9.7 * 2
   }
 
+  .newco__header-container--1 {
+    top: 60%;
+  }
+
   .newco__section-1 {
     min-height: 90vh;
   }
@@ -134,8 +372,69 @@
     min-height: 550px;
   }
 
+  .newco__header-container--2 {
+    top: 60%;
+  }
+
   .newco__section-3 {
     min-height: 771px;
+    position: relative;
+  }
+
+  .newco__section-3__h3 {
+    font-size: 70px;
+    line-height: 92px;
+    left: 0;
+    position: absolute;
+    text-align: left;
+  }
+
+  .newco__section-3__grid {
+    grid-row-gap: 50px;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: 50% 50%;
+    margin-bottom: 40px;
+    padding: 50px 9.7% 0 9.7%;
+  }
+
+  .newco__section-3__row-1 {
+    grid-column: 2 / 3;
+    margin-left: 5%;
+    padding-top: 10px;
+    width: 50%;
+  }
+
+  .newco__brand {
+    margin-left: 15%;
+    margin-right: auto;
+  }
+
+  .newco__section-3__row-2 {
+    margin-left: 13%;
+  }
+
+  .newco__more {
+    margin: 0 0 0 auto;
+  }
+
+  .newco__section-3__row-5 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    padding-top: 15px;
+  }
+
+  .newco__section-3__row-4 {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+    padding-top: 35px;
+  }
+
+  .newco__growth {
+    margin: 0 auto;
+  }
+
+  .newco__section-3__p {
+    padding: 0 21%;
   }
 
   .newco__section-4 {
@@ -144,5 +443,62 @@
 
   .newco__section-5 {
     min-height: 805px;
+  }
+
+  .newco__header-container--5 {
+    left: 70%;
+  }
+
+  // shapes
+  .shape-1 {
+    // max-width: none;
+    right: 5%;
+    top: -45%;
+    width: 31%;
+  }
+
+  .shape-2 {
+    // max-width: none;
+    left: 27.5%;
+    top: 19%;
+    width: 10%;
+  }
+
+  .shape-3 {
+    // max-width: none;
+    top: 82%;
+    width: 18%;
+  }
+
+  .shape-4 {
+    // max-width: none;
+    left: 5%;
+    top: -20%;
+    width: 28%;
+  }
+
+  .shape-5 {
+    // max-width: none;
+    width: 15.6%;
+  }
+
+  .shape-6 {
+    // max-width: none;
+    width: 6%;
+  }
+
+  .shape-7 {
+    width: 10.2%;
+  }
+
+  .shape-8 {
+    left: 5%;
+    top: -30%;
+    width: 49%;
+  }
+
+  .shape-9 {
+    left: 30%;
+    width: 21.5%;
   }
 }
