--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -459,53 +459,55 @@
 
   // shapes
   .shape-1 {
-    // max-width: none;
+    max-width: 470px;
     right: 5%;
-    top: -45%;
-    width: 31%;
+    top: -37%;
+    width: 28%;
   }
 
   .shape-2 {
-    // max-width: none;
     left: 27.5%;
     top: 19%;
     width: 10%;
   }
 
   .shape-3 {
-    // max-width: none;
     top: 82%;
     width: 18%;
   }
 
   .shape-4 {
-    // max-width: none;
     left: 5%;
     top: -20%;
     width: 28%;
   }
 
   .shape-5 {
-    // max-width: none;
+    bottom: -22%;
     width: 15.6%;
   }
 
   .shape-6 {
-    // max-width: none;
+    left: 9.6%;
+    top: 15%;
     width: 6%;
   }
 
   .shape-7 {
+    bottom: 7%;
+    max-width: 210px;
     width: 10.2%;
   }
 
   .shape-8 {
+    max-width: 700px;
     left: 5%;
     top: -30%;
     width: 49%;
   }
 
   .shape-9 {
+    max-width: 350px;
     left: 30%;
     width: 21.5%;
   }
