--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -11,3 +11,7 @@ $yellow: #f4c55c;
 $screen-md: 768px;
 $screen-lg: 1024px;
 $screen-xl: 1280px;
+
+// shapes
+$shape-design-width: 51px;
+$shape-design-top: 21%;
