--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -28,7 +28,7 @@
 }
 
 .newco__section-1 {
-  background: $green;
+  // background: $green;
   min-height: 100vh;
   position: relative;
 }
@@ -60,13 +60,13 @@
 }
 
 .newco__section-2 {
-  background: $blue;
+  // background: $blue;
   min-height: 100vh;
   position: relative;
 }
 
 .newco__section-3 {
-  background: $white;
+  // background: $white;
   padding-bottom: 75px;
   padding-top: 100px;
 }
@@ -208,13 +208,13 @@
 }
 
 .newco__section-4 {
-  background: $purple;
+  // background: $purple;
   min-height: 100vh;
   position: relative;
 }
 
 .newco__section-5 {
-  background: $blush;
+  // background: $blush;
   min-height: 100vh;
   position: relative;
 }
@@ -649,5 +649,14 @@
     max-width: 350px;
     left: 30%;
     width: 21.5%;
+  }
+}
+
+@media (min-width: $screen-xl) {
+  .panel {
+    box-sizing: border-box;
+    margin: 0 auto;
+    max-width: 1280px;
+    width: 100%;
   }
 }
