--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -305,41 +305,41 @@
 // pulse animation
 @keyframes pulse-brand {
   0% {
-    transform: scale(0.95);
+    transform: scale($pulse-scale-1);
     box-shadow: 0 0 0 rgba(190, 204, 213, 0.7);
   }
 
   70% {
-    transform: scale(1);
+    transform: scale($pulse-scale-2);
     box-shadow: 0 0 0 10px rgba(190, 204, 213, 0);
   }
 
   100% {
-    transform: scale(0.95);
+    transform: scale($pulse-scale-3);
     box-shadow: 0 0 0 0 rgba(190, 204, 213, 0);
   }
 }
 
 @keyframes pulse-dev {
   0% {
-    transform: scale(0.95);
+    transform: scale($pulse-scale-1);
     box-shadow: 0 0 0 rgba(244, 197, 92, 0.7);
   }
 
   70% {
-    transform: scale(1);
+    transform: scale($pulse-scale-2);
     box-shadow: 0 0 0 10px rgba(244, 197, 92, 0);
   }
 
   100% {
-    transform: scale(0.95);
+    transform: scale($pulse-scale-3);
     box-shadow: 0 0 0 0 rgba(244, 197, 92, 0);
   }
 }
 
 @keyframes pulse-design {
   0% {
-    transform: scale(0.95);
+    transform: scale($pulse-scale-1);
     box-shadow: 0 0 0 rgba(216, 189, 220, 0.7);
     height: $shape-design-width - 10px;
     left: 50%;
@@ -350,7 +350,7 @@
   }
 
   70% {
-    transform: scale(0.1);
+    transform: scale($pulse-scale-2);
     box-shadow: 0 0 0 10px rgba(216, 189, 220, 0);
     height: $shape-design-width - 10px;
     left: 50%;
@@ -361,7 +361,7 @@
   }
 
   100% {
-    transform: scale(0.95);
+    transform: scale($pulse-scale-3);
     box-shadow: 0 0 0 0 rgba(216, 189, 220, 0);
     height: $shape-design-width - 10px;
     left: 50%;
@@ -374,34 +374,34 @@
 
 @keyframes pulse-growth {
   0% {
-    transform: scale(0.95);
+    transform: scale($pulse-scale-1);
     box-shadow: 0 0 0 rgba(179, 183, 149, 0.7);
   }
 
   70% {
-    transform: scale(1);
+    transform: scale($pulse-scale-2);
     box-shadow: 0 0 0 10px rgba(179, 183, 149, 0);
   }
 
   100% {
-    transform: scale(0.95);
+    transform: scale($pulse-scale-3);
     box-shadow: 0 0 0 0 rgba(179, 183, 149, 0);
   }
 }
 
 @keyframes pulse-more {
   0% {
-    transform: scale(0.95);
+    transform: scale($pulse-scale-1);
     box-shadow: 0 0 0 rgba(190, 204, 213, 0.7);
   }
 
   70% {
-    transform: scale(1);
+    transform: scale($pulse-scale-2);
     box-shadow: 0 0 0 10px rgba(190, 204, 213, 0);
   }
 
   100% {
-    transform: scale(0.95);
+    transform: scale($pulse-scale-3);
     box-shadow: 0 0 0 0 rgba(190, 204, 213, 0);
   }
 }
