--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -15,3 +15,8 @@ $screen-xl: 1280px;
 // shapes
 $shape-design-width: 51px;
 $shape-design-top: 21%;
+
+// animations
+$pulse-scale-1: 1;
+$pulse-scale-2: 1;
+$pulse-scale-3: 1;
