--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,4 @@
 @import "base";
 @import "fonts";
 @import "site/homepage";
+@import url("https://fonts.googleapis.com/css?family=Biryani:600|Muli&display=swap");
