--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -20,7 +20,7 @@ h3 {
 }
 
 p {
-  font-family: "Muli", sans-serif;
+  font-family: "Biryani", sans-serif;
   font-size: 17px;
   line-height: 29px;
   text-align: center;
@@ -55,9 +55,9 @@ p {
   }
 
   p {
-    font-size: 20px;
+    font-size: 16px;
     font-weight: bold;
-    line-height: 31px;
+    line-height: 30px;
   }
 }
 
