--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -20,3 +20,19 @@ $shape-design-top: 21%;
 $pulse-scale-1: 1;
 $pulse-scale-2: 1;
 $pulse-scale-3: 1;
+
+// content side padding
+$content-padding: 6.6%;
+
+@media (min-width: $screen-md) and (max-width: #{$screen-lg - 1px}) {
+  $content-padding: 26%;
+}
+
+@media (max-width: $screen-lg) {
+  $content-padding: 9.7%;
+}
+
+// z-index
+// $text-hider-z-index: 2;
+// $text-z-index: 4;
+// $shapes-z-index: 3;
