--- a/app/assets/stylesheets/site/homepage.scss
+++ b/app/assets/stylesheets/site/homepage.scss
@@ -474,6 +474,10 @@
     min-height: 90vh;
   }
 
+  .newco__header-container--1 {
+    top: 60%;
+  }
+
   .newco__h1-container {
     width: 100%;
   }
@@ -483,15 +487,7 @@
   }
 
   .newco__p--1 {
-    // animation-name: fade-in-up-to-70;
-    // animation-delay: 0.25s;
-    // animation-duration: 1s;
-    // animation-timing-function: ease-in-out;
-    // left: 50%;
-    // opacity: 0;
-    // position: absolute;
-    // top: 70%;
-    // transform: translate(-50%, -50%);
+    margin: 0 auto;
     width: 63%;
   }
 
@@ -499,8 +495,12 @@
     min-height: 758px;
   }
 
-  .newco__header-container--2 {
-    top: 60%;
+  .newco__h2--2 {
+    top: 55%;
+  }
+
+  .newco__p--2 {
+    top: 65%;
   }
 
   .newco__section-3 {
@@ -508,7 +508,7 @@
     position: relative;
   }
 
-  .newco__section-3__h3 {
+  .newco__h3--3 {
     font-size: 70px;
     line-height: 92px;
     left: 0;
@@ -561,7 +561,7 @@
     margin: 0 auto;
   }
 
-  .newco__section-3__p {
+  .newco__p--3 {
     padding: 0 21%;
   }
 
