--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -38,6 +38,10 @@ p {
   padding: 0 6.6%; // make sure this matches the $content-padding in variables.scss
 }
 
+.hidden {
+  display: none;
+}
+
 @media (min-width: 768px) {
   h1 {
     font-size: 100px;
