--- a/app/assets/stylesheets/site/homepage.scss
+++ b/app/assets/stylesheets/site/homepage.scss
@@ -167,7 +167,30 @@
   animation: pulse-brand 2s infinite;
   border-radius: 50%;
   margin: 0 auto 5px auto;
+  position: relative;
   width: 55px;
+}
+
+.newco__section-3__stat {
+  background: $black;
+  box-sizing: border-box;
+  color: $white;
+  font-family: "Cambon";
+  font-size: 25px;
+  height: 150px;
+  line-height: 32px;
+  position: absolute;
+  text-align: center;
+  width: 150px;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.newco__section-3__stat--brand {
+  left: 30px;
+  padding-top: 25px;
+  top: -30px;
 }
 
 // row 2
@@ -191,6 +214,12 @@
   width: $width;
 }
 
+.newco__section-3__stat--dev {
+  left: 30px;
+  padding-top: 25px;
+  top: -30px;
+}
+
 // row 3
 .newco__section-3__row-3 {
   grid-row: 3 / 4;
@@ -203,7 +232,7 @@
   width: 130px;
 }
 
-.newco__section-3__img-3-container {
+.newco__section-3__img-3-pulse {
   animation: pulse-design 2s infinite;
   height: $shape-design-width - 10px;
   left: 50%;
@@ -216,6 +245,10 @@
   }
 }
 
+.newco__section-3__img-3-container {
+  position: relative;
+}
+
 .newco__section-3__img-3 {
   display: block;
   margin: 0 auto 5px auto;
@@ -223,6 +256,12 @@
   &:hover {
     cursor: pointer;
   }
+}
+
+.newco__section-3__stat--design {
+  left: 60px;
+  padding-top: 25px;
+  top: -30px;
 }
 
 // row 4
@@ -244,6 +283,12 @@
   width: $width;
 }
 
+.newco__section-3__stat--growth {
+  left: 30px;
+  padding-top: 25px;
+  top: -30px;
+}
+
 // row 5
 .newco__section-3__row-5 {
   grid-row: 5 / 6;
@@ -262,6 +307,12 @@
   height: $width;
   margin: 0 auto 5px auto;
   width: $width;
+}
+
+.newco__section-3__stat--more {
+  left: 30px;
+  padding-top: 25px;
+  top: -30px;
 }
 
 .newco__p--3 {
@@ -527,7 +578,9 @@
 
   .newco__section-3__row-1 {
     grid-column: 2 / 3;
+    margin-bottom: 0;
     margin-left: 5%;
+    margin-top: 30px;
     padding-top: 10px;
     width: 50%;
   }
