--- a/app/assets/stylesheets/site/homepage.scss
+++ b/app/assets/stylesheets/site/homepage.scss
@@ -188,8 +188,9 @@
 }
 
 .newco__section-3__stat--brand {
-  left: 30px;
+  // left: 30px;
   padding-top: 25px;
+  right: 30px;
   top: -30px;
 }
 
@@ -310,7 +311,7 @@
 }
 
 .newco__section-3__stat--more {
-  left: 30px;
+  right: 30px;
   padding-top: 25px;
   top: -30px;
 }
@@ -422,6 +423,18 @@
   bottom: 10%;
   left: 25%;
   width: 45.5%;
+}
+
+@media (min-width: $screen-md) {
+  .newco__section-3__stat--brand {
+    left: 30px;
+    right: unset;
+  }
+
+  .newco__section-3__stat--more {
+    left: 30px;
+    right: unset;
+  }
 }
 
 @media (min-width: $screen-md) and (max-width: #{$screen-lg - 1px}) {
