--- a/app/assets/stylesheets/site/homepage.scss
+++ b/app/assets/stylesheets/site/homepage.scss
@@ -134,7 +134,6 @@
   animation-delay: 0.5s;
   display: grid;
   grid-template-rows: auto auto auto auto auto;
-  opacity: 0;
   padding: 0 6.6%;
 }
 
@@ -154,8 +153,10 @@
 
 // row 1
 .newco__section-3__row-1 {
+  animation-delay: 0.25s;
   grid-row: 1 / 2;
   margin-bottom: 15px;
+  opacity: 0;
 }
 
 .newco__brand {
@@ -196,8 +197,10 @@
 
 // row 2
 .newco__section-3__row-2 {
+  animation-delay: 0.5s;
   grid-row: 2 / 3;
   margin-bottom: 40px;
+  opacity: 0;
 }
 
 .newco__dev {
@@ -223,8 +226,10 @@
 
 // row 3
 .newco__section-3__row-3 {
+  animation-delay: 0.75s;
   grid-row: 3 / 4;
   margin-bottom: 40px;
+  opacity: 0;
 }
 
 .newco__design {
@@ -267,8 +272,10 @@
 
 // row 4
 .newco__section-3__row-4 {
+  animation-delay: 1s;
   grid-row: 4 / 5;
   margin-bottom: 40px;
+  opacity: 0;
 }
 
 .newco__growth {
@@ -292,8 +299,10 @@
 
 // row 5
 .newco__section-3__row-5 {
+  animation-delay: 1.25s;
   grid-row: 5 / 6;
   margin-bottom: 40px;
+  opacity: 0;
 }
 
 .newco__more {
@@ -317,7 +326,7 @@
 }
 
 .newco__p--3 {
-  animation-delay: 1s;
+  animation-delay: 1.5s;
   opacity: 0;
   width: 100%;
 }
@@ -612,12 +621,18 @@
   }
 
   .newco__section-3__row-5 {
+    animation-delay: 0.75s;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     padding-top: 15px;
   }
 
+  .newco__section-3__row-3 {
+    animation-delay: 1s;
+  }
+
   .newco__section-3__row-4 {
+    animation-delay: 1.25s;
     grid-column: 2 / 3;
     grid-row: 3 / 4;
     padding-top: 35px;
