--- a/app/assets/stylesheets/site/homepage.scss
+++ b/app/assets/stylesheets/site/homepage.scss
@@ -1,5 +1,6 @@
 .newco {
   background: $green;
+  height: 100%;
   transition: background-color 1s ease;
 }
 
@@ -103,7 +104,7 @@
 }
 
 .newco__p--2 {
-  animation-delay: 0.2s;
+  // animation-delay: 0s;
   left: 50%;
   opacity: 0;
   position: absolute;
@@ -192,8 +193,7 @@
 }
 
 .newco__section-3__stat--brand {
-  // left: 30px;
-  padding-top: 25px;
+  padding-top: 10px;
   right: 30px;
   top: -30px;
 }
@@ -307,7 +307,7 @@
 
 .newco__section-3__stat--growth {
   left: 30px;
-  padding-top: 25px;
+  padding-top: 11px;
   top: -30px;
 }
 
