--- a/app/assets/stylesheets/site/homepage.scss
+++ b/app/assets/stylesheets/site/homepage.scss
@@ -279,7 +279,7 @@
 
 .newco__section-3__stat--design {
   left: 60px;
-  padding-top: 30px;
+  padding-top: 16px;
   top: -30px;
 }
 
@@ -337,7 +337,7 @@
 }
 
 .newco__section-3__img-5-container-pulse {
-  animation: pulse-more 2s infinite;
+  // animation: pulse-more 2s infinite;
 }
 
 .newco__section-3__stat--more {
