--- a/app/assets/stylesheets/site/animations.scss
+++ b/app/assets/stylesheets/site/animations.scss
@@ -132,52 +132,51 @@ $animation-duration: 0.75s;
 .fade-in {
   animation-name: fade-in;
   animation-duration: $animation-duration;
-  animation-timing-function: linear;
+  animation-timing-function: ease-in-out;
 }
 
 .fade-out {
   animation-name: fade-out;
   animation-duration: $animation-duration;
-  animation-timing-function: linear;
+  animation-timing-function: ease-in-out;
 }
 
+.fade-in-up-h1--1,
 .fade-in-up-h2--2 {
   animation-name: fade-in-up-to-50;
   animation-duration: $animation-duration;
-  animation-timing-function: linear;
+  animation-timing-function: ease-in-out;
 }
 
+.fade-in-up-p--1,
 .fade-in-up-p--2 {
   animation-name: fade-in-up-to-68;
   animation-duration: $animation-duration;
-  animation-timing-function: linear;
-}
-
-.fade-in-h3--3 {
+  animation-timing-function: ease-in-out;
 }
 
 .fade-in-up-header-container--4 {
   animation-name: fade-in-up-to-50;
   animation-duration: $animation-duration;
-  animation-timing-function: linear;
+  animation-timing-function: ease-in-out;
 }
 
 .fade-in-up-header-container--5 {
   animation-name: fade-in-up-to-50;
   animation-duration: $animation-duration;
-  animation-timing-function: linear;
+  animation-timing-function: ease-in-out;
 }
 
 @media (min-width: $screen-lg) {
   .fade-in-up-h2--2 {
     animation-name: fade-in-up-to-55;
     animation-duration: $animation-duration;
-    animation-timing-function: linear;
+    animation-timing-function: ease-in-out;
   }
 
   .fade-in-up-p--2 {
     animation-name: fade-in-up-to-65;
     animation-duration: $animation-duration;
-    animation-timing-function: linear;
+    animation-timing-function: ease-in-out;
   }
 }
