Complete first pass on desktop loading screen

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,4 +19,5 @@
 @import "site/mixins";
 @import "site/animations";
 @import "site/homepage";
+@import "site/loading_screen";
 @import url("https://fonts.googleapis.com/css?family=Biryani:600|Muli&display=swap");
