--- a/app/assets/stylesheets/site/loading_screen.scss
+++ b/app/assets/stylesheets/site/loading_screen.scss
@@ -1,6 +1,7 @@
 // animation
-$animation-duration: 2.75s;
+$animation-duration: 0.75s;
 $animation-delay: $animation-duration / 4;
+// $animation-delay: 0.5s;
 
 // shapes
 $shape-1-height-sm: 141px;
