--- a/app/assets/stylesheets/site/homepage.scss
+++ b/app/assets/stylesheets/site/homepage.scss
@@ -6,6 +6,17 @@
   transition: background-color 1s ease;
 }
 
+.newco__black-circle-cursor {
+  $length: 30px;
+  border: 1px solid $black;
+  border-radius: 50%;
+  margin-top: -$length / 2;
+  margin-left: -$length / 2;
+  height: $length;
+  position: absolute;
+  width: $length;
+}
+
 .color-blue {
   background: $blue;
 }
