Complete first pass on cursor implementation

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -1,11 +1,11 @@
-html {
-  height: 100%;
-  overflow: auto;
-}
-body {
-  height: 100%;
-  overflow: auto;
-}
+// html {
+//   height: 100%;
+//   overflow: auto;
+// }
+// body {
+//   height: 100%;
+//   overflow: auto;
+// }
 
 h1 {
   font-family: "Cambon";
