--- a/app/assets/stylesheets/site/homepage.scss
+++ b/app/assets/stylesheets/site/homepage.scss
@@ -1,13 +1,15 @@
-.newco {
+body {
   background: $green;
-  height: 100%;
-  overflow: hidden;
-  position: relative;
   transition: background-color 1s ease;
 }
 
+.newco {
+  height: 100%;
+  overflow: hidden;
+}
+
 .newco__black-circle-cursor {
-  $length: 30px;
+  $length: 75px;
   border: 1px solid $black;
   border-radius: 50%;
   margin-top: -$length / 2;
@@ -15,6 +17,7 @@
   height: $length;
   position: absolute;
   width: $length;
+  z-index: 10;
 }
 
 .color-blue {
@@ -95,6 +98,7 @@
 
 .newco__h1--1 {
   left: 50%;
+  mix-blend-mode: exclusion;
   opacity: 0;
   position: absolute;
   top: 50%;
@@ -165,6 +169,10 @@
 
 .newco__section-3__img {
   width: 100%;
+}
+
+.newco__stat {
+  position: relative;
   &:hover {
     cursor: pointer;
   }
@@ -180,6 +188,7 @@
 
 .newco__brand {
   margin-left: auto;
+  position: relative;
   width: 140px;
 }
 
@@ -187,6 +196,7 @@
   border-radius: 50%;
   margin: 0 auto 5px auto;
   position: relative;
+  height: 53px;
   width: 55px;
 }
 
@@ -213,10 +223,13 @@
   }
 }
 
-.newco__section-3__stat--brand {
+.newco__section-3__stat {
   padding-top: 15px;
-  right: 30px;
-  top: -30px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background: transparent;
+  color: $white;
 }
 
 // row 2
@@ -247,9 +260,9 @@
 }
 
 .newco__section-3__stat--dev {
-  left: 30px;
+  // left: 30px;
   padding-top: 30px;
-  top: -30px;
+  // top: -30px;
 }
 
 // row 3
@@ -273,9 +286,6 @@
   top: $shape-design-top;
   transform: translate(-50%, -50%) perspective(0.6px) rotateX(0.45deg);
   width: $shape-design-width;
-  &:hover {
-    cursor: pointer;
-  }
 }
 
 .newco__section-3__img-3-pulse-pulse {
@@ -290,15 +300,10 @@
   display: block;
   margin: 0 auto 5px auto;
   width: 72px;
-  &:hover {
-    cursor: pointer;
-  }
 }
 
 .newco__section-3__stat--design {
-  left: 60px;
   padding-top: 16px;
-  top: -30px;
 }
 
 // row 4
@@ -327,9 +332,9 @@
 }
 
 .newco__section-3__stat--growth {
-  left: 30px;
+  // left: 30px;
   padding-top: 30px;
-  top: -30px;
+  // top: -30px;
 }
 
 // row 5
@@ -359,9 +364,9 @@
 }
 
 .newco__section-3__stat--more {
-  right: 30px;
+  // right: 30px;
   padding-top: 30px;
-  top: -30px;
+  // top: -30px;
 }
 
 .newco__p--3 {
@@ -406,6 +411,7 @@
 
 // shapes
 .shape {
+  mix-blend-mode: exclusion;
   position: absolute;
   z-index: 2;
 }
@@ -475,13 +481,13 @@
 
 @media (min-width: $screen-md) {
   .newco__section-3__stat--brand {
-    left: 30px;
-    right: unset;
+    // left: 30px;
+    // right: unset;
   }
 
   .newco__section-3__stat--more {
-    left: 30px;
-    right: unset;
+    // left: 30px;
+    // right: unset;
   }
 }
 
@@ -596,6 +602,10 @@
 
   .newco__h1 {
     width: 100%;
+  }
+
+  .newco__h1--1 {
+    line-height: inherit;
   }
 
   .newco__p--1 {
