--- a/app/assets/stylesheets/site/homepage.scss
+++ b/app/assets/stylesheets/site/homepage.scss
@@ -99,7 +99,6 @@ body {
 
 .newco__h1--1 {
   left: 50%;
-  mix-blend-mode: exclusion;
   opacity: 0;
   position: absolute;
   top: 50%;
@@ -412,7 +411,7 @@ body {
 
 // shapes
 .shape {
-  mix-blend-mode: exclusion;
+  // mix-blend-mode: exclusion;
   position: absolute;
   z-index: 2;
 }
