Fix safari design issue

--- a/app/assets/stylesheets/site/homepage.scss
+++ b/app/assets/stylesheets/site/homepage.scss
@@ -285,6 +285,7 @@ body {
 
 .newco__section-3__img-3-pulse-pulse {
   animation: pulse-design 2s infinite;
+  position: absolute;
 }
 
 .newco__section-3__img-3-container {
